# yterm

./: Cargo.toml
src/: conn.rs  lib.rs  local_connector.rs  logic.rs  main.rs  message.rs  ui_gtk.rs
src/conn/: channel.rs  conn.rs
src/logic/: app.rs  state.rs  terminal.rs  window.rs
src/message/: message.rs
src/ui_gtk/: app.rs  event_bridge.rs  state.rs  terminal.rs
yterm_backend/: Cargo.toml
yterm_backend/src/: app.rs  lib.rs  pty.rs  state.rs  terminal.rs  window.rs
yterm_frontend_gtk3/: Cargo.toml
yterm_frontend_gtk3/src/: app.rs  event_bridge.rs  im.rs  lib.rs  state.rs  terminal.rs
yterm_lib/: Cargo.toml
yterm_lib/src/: conn.rs  lib.rs  message.rs
yterm_lib/src/conn/: conn.rs
yterm_lib/src/message/: event.rs
