[package]
name = "yterm"
version = "0.1.0"
authors = ["yutopp <yutopp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

[dependencies.yterm_backend]
path = "./yterm_backend"

[dependencies.yterm_lib]
path = "./yterm_lib"

[dependencies.yterm_frontend_gtk3]
path = "./yterm_frontend_gtk3"

[workspace]
members = [
    "yterm_backend",
    "yterm_lib",
    "yterm_frontend_gtk3",
]
