[package]
name = "yterm_backend"
version = "0.1.0"
authors = ["yutopp <yutopp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = ""
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

[dependencies.yterm_lib]
path = "../yterm_lib"
